--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
-    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react-hooks": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
+    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.0",
     "lodash-webpack-plugin": "^0.11.5",
