--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     }
   },
   "dependencies": {
+    "framer-motion": "^2.0.0-beta.59",
     "lodash-es": "^4.17.15",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router": "^5.1.2",
+    "typestyle": "^2.1.0"
   },
   "devDependencies": {
     "@types/lodash-es": "^4.17.3",
@@ -26,11 +29,11 @@
     "@typescript-eslint/eslint-plugin": "^2.30.0",
     "@typescript-eslint/parser": "^2.30.0",
     "case-sensitive-paths-webpack-plugin": "^2.3.0",
+    "copy-webpack-plugin": "^5.1.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-react-hooks": "^3.0.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
-    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.0",
     "lodash-webpack-plugin": "^0.11.5",
