--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     }
   },
   "dependencies": {
+    "@types/classnames": "^2.2.10",
+    "@types/react-router-dom": "^5.1.5",
+    "classnames": "^2.2.6",
     "framer-motion": "^2.0.0-beta.59",
     "lodash-es": "^4.17.15",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "typestyle": "^2.1.0"
   },
   "devDependencies": {
